--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -7133,15 +7133,15 @@
  COUNTRY_STATUS:0 "$NAME|H$\n$STATUS$"
  NUM_CLAIMS:0 "$VALUE$"
  CLAIMED_SYSTEM:0 "ระบบที่มีการอ้างสิทธิ์"
- CLAIM_SYSTEM:0 "Claim System"
+ CLAIM_SYSTEM:0 "ระบบดาวที่อ้างสิทธิ์"
  CLAIM_SYSTEM_TOOLTIP:0 "§Eคลิกเพื่อเพิ่มการอ้างสิทธิ์ในระบบ $SYSTEM|Y$§!"
  CLAIM_SYSTEM_CONFIRMATION:0 "Do you want to add a claim on $SYSTEM|Y$ for a cost of $COST|Y$?"
- UNCLAIMABLE_SYSTEM_COMMUNICATIONS:1 "สามารถอ้างสิทธิ์ได้เฉพาะระบบภายในอาณาเขตของจักรวรรดิที่รู้จักเท่านั้น"
- UNCLAIMABLE_SYSTEM_INTEL:0 "Cannot claim systems we haven't visited or don't have intel on."
- UNCLAIMABLE_SYSTEM_WAR_ALLY:0 "Cannot claim systems that are claimed by war allies."
- UNCLAIMABLE_SYSTEM_OWNED:1 "ไม่สามารถอ้างสิทธิ์ระบบของคุณเองได้"
+ UNCLAIMABLE_SYSTEM_COMMUNICATIONS:1 "สามารถอ้างสิทธิ์ได้เฉพาะระบบดาวภายในอาณาเขตของจักรวรรดิที่รู้จักเท่านั้น"
+ UNCLAIMABLE_SYSTEM_INTEL:0 "ไม่สามารถอ้างสิทธิ์ระบบดาวที่เราไม่เคยไปหรือไม่มีข้อมูลได้"
+ UNCLAIMABLE_SYSTEM_WAR_ALLY:0 "ไม่สามารถอ้างสิทธิ์ระบบดาวที่ถูกอ้างสิทธิ์โดยพันธมิตรสงครามได้"
+ UNCLAIMABLE_SYSTEM_OWNED:1 "ไม่สามารถอ้างสิทธิ์ระบบดาวของคุณเองได้"
  CLAIM_SYSTEM_RIVALRY_COST:0 "คู่แข่ง: $VALUE|%G0$"
- CLAIM_SYSTEM_WAR_ATTACKER_COST:0 "Offensive War: $VALUE|%R0$"
+ CLAIM_SYSTEM_WAR_ATTACKER_COST:0 "สงครามรุกราน: $VALUE|%R0$"
  CANNOT_REMOVE_CLAIMS_TOO_MANY:0 "เราไม่สามารถลบการอ้างสิทธิ์เกินกว่าที่เรามีได้"
  CANNOT_REMOVE_CLAIMS_AT_WAR:0 "เราไม่สามารถลบการอ้างสิทธิ์ในขณะที่อยู่ในภาวะสงครามได้"
  CANNOT_ADD_CLAIM_POLICY:1 "§ROur §YWar Philosophy§! policy does not permit claiming this system except in a defensive war§!"
@@ -7194,17 +7194,17 @@
  INVALID_AMOUNT:0 "$AMOUNT$ไม่ถูกต้อง"
  INVALID_AMOUNT_ABOVE_MAX:0 "Max amount of £$KEY$£$MAX_AMOUNT|0Y$ per trade exceeded."
  PRICE:0 "ราคา"
- ADD:0 "Add"
+ ADD:0 "เพิ่ม"
  OPTIONAL:0 "ทางเลือก"
  MARKET_LACKING_RESOURCE:0 "ขาดทรัพยากร"
- SELECT_AMOUNT_HEADER:0 "Trade amount"
- SELECT_AMOUNT_DESC:0 "§GClick to enter the amount you want to trade.§!"
+ SELECT_AMOUNT_HEADER:0 "จำนวนการค้า"
+ SELECT_AMOUNT_DESC:0 "§Gคลิกเพื่อป้อนจำนวนที่คุณต้องการซื้อขายแลกเปลี่ยน§!"
  SELECT_PRICE_HEADER:0 "ราคาซื้อขาย"
  SELECT_PRICE_DESC:0 "§Gคลิกเพื่อป้อนราคา ($OPTIONAL$)§!"
  CANCEL_REMOVE:0 "ยกเลิก/ลบ"
- CANCEL_TRADE_DESC:0 "§GClick to cancel or remove this trade.§!"
+ CANCEL_TRADE_DESC:0 "§Gคลิกเพื่อยกเลิกหรือลบการซื้อขายแลกเปลี่ยนนี้§!"
  ADD_EDIT:0 "เพิ่ม/แก้ไข"
- ADD_TRADE_DESC:0 "§GClick to add or edit this trade.§!"
+ ADD_TRADE_DESC:0 "§Gคลิกเพื่อเพิ่มหรือแก้ไขการซื้อขายแลกเปลี่ยนนี้§!"
  TRADE_TYPE:0 "ประเภทการค้า"
  TRADE_TYPE_NOT_SELCTED:0 "ยังไม่ได้เลือก$TRADE_TYPE$"
  RESOURCE_NOT_SELECTED:0 "ไม่ได้เลือกทรัพยากร"
@@ -7231,13 +7231,13 @@
  PUT_ON_MARKET_ENTRY:0 "$NUM|Y$ £pop£ - $NAME|Y$"
  SLAVES_ON_PLANET_HEADER:0 "ทาสบนดาว $PLANET$"
  SLAVES_OF_SPECIES_HEADER:0 "ทาส $SPECIES$"
- SLAVES_OF_SPECIES_AMOUNT:2 "Amount of $SPECIES$ Slaves in Empire: $NUM_SLAVES|Y$ £pop£"
- SLAVES_OF_SPECIES_DESC:0 "Total Amount of $SPECIES$ Slaves: $NUM_SLAVES|Y$ £pop£"
+ SLAVES_OF_SPECIES_AMOUNT:2 "จำนวนทาส $SPECIES$ ในจักรวรรดิ: $NUM_SLAVES|Y$ £pop£"
+ SLAVES_OF_SPECIES_DESC:0 "จำนวนทาส $SPECIES$ ทั้งหมด: $NUM_SLAVES|Y$ £pop£"
  SLAVE_MARKET_DROPDOWN_SPECIES_ENTRY_INFO:0 "$SPECIES_NAME$ £slavery£ $NUM_SLAVES|Y$"
- ENTRY_ALREADY_OPEN:1 "§RThis Species is currently shown§!"
+ ENTRY_ALREADY_OPEN:1 "§Rเผ่าพันธุ์นี้กำลังแสดงอยู่ในปัจจุบัน§!"
  CLICK_TO_SHOW_ENTRY:0 "$MANUAL_RESETTLEMENT_CLICK_TO_SHOW$"
  CLICK_TO_SELECT_POP:0 "§Gคลิกเพื่อเลือกประชากรนี้§!"
- CLICK_TO_REMOVE_SLAVE_FROM_MARKET:0 "Click to remove this Pop from the §YSlave Market§!"
+ CLICK_TO_REMOVE_SLAVE_FROM_MARKET:0 "คลิกเพื่อลบประชากรนี้ออกจาก §Yตลาดค้าทาส§!"
  SELL_SLAVES_SUMMARY:0 "คุณได้เลือกแล้ว $NUM|Y$ £pop£ ประชากร ที่จะวางขายใน §Yตลาดค้าทาส§! มูลค่าโดยประมาณคือ $COST|Y$"
  POP_ALREADY_ON_MARKET:0 "This Pop is already for sale on the §YSlave Market§!"
  NOT_OWNER_OF_POP:0 "คุณไม่ได้เป็นเจ้าของประชากรนี้"
@@ -7250,7 +7250,7 @@
  ALREADY_OWNER_OF_POP:0 "You are already the owner of this Pop"
  POP_NOT_ON_MARKET:0 "This Pop is not for sale any more"
  CLICK_TO_OPEN_SLAVE_POOL:0 "§Gคลิกเพื่อเลือกทาสที่จะขาย§!"
- NO_PLANETS_WITH_SLAVES:0 "No Planets with slaves"
+ NO_PLANETS_WITH_SLAVES:0 "ไม่มีดาวเคราะห์ที่มีทาส"
  NO_SLAVES_FOR_SALE:0 "ไม่มีทาสขาย..."
  TOO_MANY_SLAVES:0 "Market is full of slaves. The cap of $CAP|Y$ has been reached."
  ESTIMATED_PRICE:0 "Estimated Selling Price"
@@ -7429,7 +7429,7 @@
  ACTION_ASK_TO_BE_RELEASED_SUBJECT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ร้องขอการปลดแอกจากการเป็นบริวารของเรา"
  WARNING_NOT_ACTIVE_IN_WAR_TITLE:0 "Warning! Not active in war."
  ACTION_NOT_ACTIVE_IN_WAR_TITLE:0 "ไม่ได้ใช้งานในสงคราม"
- ACTION_REQUEST_WAR_TITLE:0 "Propose war"
+ ACTION_REQUEST_WAR_TITLE:0 "เสนอสงคราม"
  ACTION_REQUEST_WAR_DESC:0 "Propose this war to the president"
  ACTION_PROPOSE_INVITE_TITLE:0 "เชิญเข้าร่วมสหพันธ์"
  ACTION_PROPOSE_INVITE_DESC:0 "Propose this invite to the president"
@@ -7440,7 +7440,7 @@
  ACTION_OFFER_TRADE_DEAL_SAME_AS_REPLACE:0 "£trigger_no£ New Offer cannot be same as replaced deal!"
  ACTION_REQ_PEACE_WITH:0 "£trigger_no£ เราจะต้องไม่ทำสงครามกับ §H$RECIPIENT$§!!"
  ACTION_CANCEL_TRADE_DEAL_TITLE:0 "ยกเลิกข้อตกลงการค้า"
- ACTION_CANCEL_TRADE_DEAL_DESC:0 "Cancel Trade Deal with §H[Recipient.GetName]§!."
+ ACTION_CANCEL_TRADE_DEAL_DESC:0 "ยกเลิกข้อตกลงการค้ากับ §H[Recipient.GetName]§!"
  ACTION_EMBASSY_TITLE:0 "ตั้งสถานทูต"
  ACTION_EMBASSY_DESC:1 "ก่อตั้งสถานทูตบนดาวเคราะห์ศูนย์กลางจักรวรรดิพวกเขา ปรับปรุงประสิทธิภาพของทูตกับมิตรและเพิ่มข้อมูลข่าวกรองของเป้าหมาย"
  ACTION_EMBASSY_COST:3 "This will improve the effectiveness of friendly envoys and increase intel targets of one another."
@@ -7640,22 +7640,22 @@
  ACTION_IMPROVE_RELATION_OFFER_DESC:0 ""
  ACTION_HARM_RELATION_OFFER_DESC:0 ""
  ACTION_DECLARE_WAR_OFFER_DESC:0 "§H[Actor.GetName]§! ประกาศสงครามกับ §H[Recipient.GetName]§!"
- ACTION_CANCEL_TRADE_DEAL_OFFER_DESC:0 "§H[Actor.GetName]§! has cancelled their trade deal with §H[Recipient.GetName]§!."
+ ACTION_CANCEL_TRADE_DEAL_OFFER_DESC:0 "§H[Actor.GetName]§! ยกเลิกข้อตกลงการค้ากับ §H[Recipient.GetName]§!"
  ACTION_END_RIVALRY_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยุติการเป็นคู่แข่งกับ §H[Recipient.GetName]§!"
  ACTION_BREAK_DEFENSIVE_PACT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกสนธิสัญญาป้องกันตนเองของเขาที่ทำกับ §H[Recipient.GetName]§!"
  ACTION_BREAK_NON_AGGRESSION_PACT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกสนธิสัญญาไม่รุกรานของพวกเขาที่ทำกับ §H[Recipient.GetName]§!"
  ACTION_BREAK_COMMERCIAL_PACT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกสนธิสัญญาการค้าของพวกเขาที่ทำกับ §H[Recipient.GetName]§!"
- ACTION_SUPPORT_INDEPENDENCE_OFFER_DESC:0 "§H[Actor.GetName]§! has chosen to support our independence against our oppressors."
- ACTION_BREAK_SUPPORT_OFFER_DESC:0 "§H[Actor.GetName]§! has ceased supporting our independence against our oppressors."
+ ACTION_SUPPORT_INDEPENDENCE_OFFER_DESC:0 "§H[Actor.GetName]§! ได้เลือกที่จะสนับสนุนเอกราชของเรา"
+ ACTION_BREAK_SUPPORT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยุติการสนับสนุนเอกราชของเรา"
  ACTION_BREAK_MIGRATION_PACT_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกสนธิสัญญาอพยพย้ายถิ่นของพวกเขาที่ทำกับ §H[Recipient.GetName]§!"
  ACTION_REVOKE_FEDERATION_ASSOCIATION_STATUS_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกสถานะการมีส่วนร่วมของเรากับ §H[Actor.GetAllianceName]§!"
  ACTION_END_FEDERATION_ASSOCIATION_STATUS_OFFER_DESC:0 "§H[Actor.GetName]§! ได้เลือกที่จะยุติสถานะการมีส่วนร่วมกับ §H[Recipient.GetAllianceName]§!"
  ACTION_VOTE_FOR_FEDERATION_LAW_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ของให้โหวตกฎหมายในสหพันธรัฐ"
  ACTION_KICK_FROM_FEDERATION_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ขับเราออกจาก §H[Actor.GetAllianceName]§!"
- ACTION_LEAVE_FEDERATION_OFFER_DESC:0 "§H[Actor.GetName]§! has left our Federation."
- ACTION_RELEASE_SUBJECT_OFFER_DESC:0 "§H[Actor.GetName]§! has released §H[Recipient.GetName]§! as an independent nation."
- ACTION_INTEGRATE_SUBJECT_OFFER_DESC:0 "§H[Actor.GetName]§! has begun integrating §H[Recipient.GetName]§! into their nation."
- ACTION_CANCEL_SUBJECT_INTEGRATION_OFFER_DESC:0 "§H[Actor.GetName]§! has cancelled their integration of §H[Recipient.GetName]§!."
+ ACTION_LEAVE_FEDERATION_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ออกจากสหพันธ์ของเรา"
+ ACTION_RELEASE_SUBJECT_OFFER_DESC:0 "§H[Actor.GetName]§! ปลดแอก §H[Recipient.GetName]§! ให้เป็นรัฐเอกราช"
+ ACTION_INTEGRATE_SUBJECT_OFFER_DESC:0 "§H[Actor.GetName]§! เริ่มการรวมชาติกับ §H[Recipient.GetName]§!"
+ ACTION_CANCEL_SUBJECT_INTEGRATION_OFFER_DESC:0 "§H[Actor.GetName]§! ได้ยกเลิกการรวมชาติกับ §H[Recipient.GetName]§!"
  ALLIANCE_NAME_01:0 "Alliance"
  ALLIANCE_NAME_02:0 "Axis"
  ALLIANCE_NAME_03:0 "Entente"
@@ -9541,7 +9541,7 @@
  MEDIUM_ARMOR_5:0 "เกราะนิวโตรเนียม (กลาง)"
  LARGE_ARMOR_5:0 "เกราะนิวโตรเนียม (ใหญ่)"
  PLANET_DESTRUCTION_COMPONENT:0 "ชิ้นส่วนนักฆ่าดาวเคราะห์"
- BORDER_EXTRUSION_VALUE:0 "Border Projection: $VALUE|Y0$"
+ BORDER_EXTRUSION_VALUE:0 "การแสดงอำนาจชายแดน: $VALUE|Y0$"
  BORDER_EXTRUDER_1:1 "Border Beacon"
  BORDER_EXTRUDER_2:0 "Boosted Border Beacon"
  BORDER_EXTRUDER_3:0 "Advanced Border Beacon"
@@ -10062,7 +10062,7 @@
  ANOMALY_LEVEL:2 "ความยาก"
  AV_NO_SCIENTIST:0 "§Rไม่มีนักวิทยาศาสตร์§!"
  AV_NO_SCIENTIST_DESC:0 "You have no science ships with assigned scientists."
- ANOMALY_VIEW_SHOW:0 "Show Anomaly"
+ ANOMALY_VIEW_SHOW:0 "แสดงความผิดปกติ"
  ANOMALY_RESEARCH_PROGRESS:0 "ความก้าวหน้าการวิจัย"
  ANOMALY_LEAVE_BE:0 "ปล่อยไปก่อนในตอนนี้"
  ANOMALY_LEAVE_BE_DESC:0 "§TWe can research this Anomaly another time.§!"
@@ -10179,13 +10179,13 @@
  edict_grand_fleet_desc:0 "Our galactic ambitions require that the construction of A Grand Fleet must be our primary goal."
  POLICIES_LABEL:0 "These are the available Policies of our Empire"
  CLICK_TO_ADD_POLICY:0 "§Gคลิกเพื่อเปิดใช้งานนโยบาย§!"
- POLICY_ACTIVITY:0 "This policy is currently $ACTIVE$."
+ POLICY_ACTIVITY:0 "นโยบายนี้ปัจจุบัน $ACTIVE$"
  ACTIVE:0 "เปิดการใช้งาน"
  NOT_ACTIVE:0 "ปิดการใช้งาน"
  TIMER:1 "\nเราไม่สามารถเปลี่ยนจุดยืนต่อนโยบายนี้ได้จนกว่าจะถึงวันที่ $DATE|H$"
  POLICY_CANNOT_CHANGE:0 "We will not be able to change our stance on this Policy until $YEARS|H$ years have passed."
  CHANGE_POLICY:0 "เปลี่ยนนโยบาย"
- POLICY_NOT_ACTIVE:0 "Requires policies:"
+ POLICY_NOT_ACTIVE:0 "ต้องมีนโยบาย:"
  POLICY_DIALOG:0 "คุณต้องการการเปลี่ยน $POLICY|H$ เป็น $OPTION|H$ ภายในจักรวรรดิ? เราจะไม่สามารถเปลี่ยนจุดยืนในเรื่องนี้เป็นเวลา $TIME|Y$ ปี นโยบายจะมีผลกระทบดังนี้:\n$EFFECTS$"
  POLICY_GROUP_TOOLTIP:1 "§T$GROUP|H$\n$GROUP_DESC$\nนโยบายปัจจุบัน: $OPTION|Y$\n\n§Gคลิกเพื่อดูตัวเลือกของนโยบาย§!§!"
  POLICY_OPTION_TOOLTIP_POP_HAPPINESS:0 "\n$NUM|H$ pops will get $MOD$ happiness from this policy."
@@ -12182,7 +12182,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.72.2, Update 31/03/2024"
+ MOD_VERSION:0 "Mod v0.72.3, Update 05/04/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
