--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -624,13 +624,13 @@
  situation_paragon_skrand_story_type:0 "Lessons of the Past"
  situation_paragon_skrand_story_desc:0 "Studying the history of Skrand and his people via the Talon's data banks should provide a number of unique insights."
  situation_paragon_skrand_story_monthly_change_tooltip:0 "$situation_paragon_skrand_monthly_change_tooltip$"
- situation_paragon_skrand_balanced:0 "Balanced Funding"
+ situation_paragon_skrand_balanced:0 "เงินทุนสมดุล"
  approach_situation_paragon_skrand_balanced_tt:0 "Sustainable financing will allow the project to move forward without overburdening our economy."
  situation_paragon_skrand_generous:0 "Generous Funding"
  approach_situation_paragon_skrand_generous_tt:0 "Generous funding will greatly enhance progress but may come with negative economic effects."
  situation_paragon_skrand_low:0 "Minimal Funding"
  approach_situation_paragon_skrand_low_tt:0 "Minimal funding will slow progress considerably, but can be a prudent strategy in times of economic crisis."
- situation_paragon_skrand_none:0 "No Funding"
+ situation_paragon_skrand_none:0 "ไม่มีเงินทุน"
  approach_situation_paragon_skrand_none_tt:0 "The project will be halted until such a time as we can afford it."
  situation_paragon_skrand_balanced_researchers:0 "Sustainable financing will allow the project to move forward without overburdening our economy. Our progress is based on the number of scientists working on this project."
  situation_paragon_skrand_low_researchers:0 "Low funding will slow progress considerably, but can be useful in times of economic crisis. Our progress is based on the number of scientists working on this project."
@@ -733,7 +733,7 @@
  paragon_origin_synthetic_ascension:0 "\n\n§PFlesh Eternal:§!\nBy creating a unique positronic brain and encasing it inside a Living Metal body, we brought the $leader_trait_legendary_leader$ back to life. To sustain [Root.GetHimHer] we need a constant supply of £sr_living_metal£ $sr_living_metal$."
  paragon_origin_genetic_ascension:0 "\n\n§PRestored Genes:§!\nAfter several attempts at splicing the DNA of the $leader_trait_legendary_leader$ into other talented individuals, a single patient managed to survive the operation and develop beneficial traits. However, new genetic material needs to be injected regularly to maintain genomic stability.\nDecennial Upkeep: §R[owner.paragon_origin_ascension]§! £pop£ $POPS$"
  paragon_origin_null_loc:0 " "
- leader_trait_legendary_origin_desc:1 "\n§GLuminary Ruler Trait§!"
+ leader_trait_legendary_origin_desc:1 "\n§Gคุณลักษณะผู้ปกครองในตำนาน§!"
  leader_trait_legendary_military_knowledge:0 "Inspired Commander"
  leader_trait_legendary_military_knowledge_desc:0 "A brilliant military commander, loved by the troops."
  leader_trait_legendary_foe_hammer:1 "Unwavering Aggressor"
