Update for Patch v3.11.3 - checksum: f537

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  minor_artifacts:0 "ศิลปวัตถุชั้นรอง"
  minor_artifacts_desc:1 "ศิลปวัตถุชั้นรอง ( £minor_artifacts£ ) เป็นตัวแทนของเทคโนโลยีอารยธรรมโบราณที่คลุมเครือซึ่งได้รับการกู้คืนโดยวิทยาศาสตร์ของเราและเรามีความเข้าใจเพียงบางส่วนเท่านั้น พวกมันมีอยู่ทั่วไปโดยมีมากกว่าวัตถุโบราณชิ้นสำคัญและสามารถใช้เพื่อเพิ่มเอฟเฟกต์ต่างๆต่อจักรวรรดิได้"
- artifact_actions:0 "Artifact Actions"
+ artifact_actions:0 "การดำเนินการเกี่ยวกับศิลปวัตถุชั้นรอง"
  relics:0 "วัตถุโบราณ"
  relic_activation_cooldown:0 "คูลดาวน์การเปิดใช้งานวัตถุโบราณ"
  tech_science_nexus:0 "$think_tank_3$"
@@ -379,7 +379,7 @@
  ancrel.10300.name:0 "$artifact_baol_research$"
  ancrel.10300.desc.terraform:0 "Studying the Baol has given us new insights into the spread of plant life and improved our terraforming processes.\n\nBy carefully tracking the changes that the Baol underwent during their loss of sentience we also learned much about the uplifting process, but have already mastered that technology."
  ancrel.10300.desc.uplift:0 "By carefully tracking the changes that the Baol underwent during their loss of sentience, we have gained much knowledge on how to reverse that process.\n\nWe have also gained new insights into the spread of plant life and improved our terraforming processes."
- baol_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_baol_research$§!"
+ baol_artifact_research_unlocked:0 "ปลดล็อกการดำเนินการใหม่ของศิลปวัตถุชั้นรอง: §Y$artifact_baol_research$§!"
  artifact_zroni_research:0 "ความลับของ Zroni"
  artifact_zroni_research_desc:0 "Delve deeper into the secrets of the Zroni."
  artifact_zroni_research_completed:0 "$artifact_zroni_research$"
@@ -389,7 +389,7 @@
  ancrel.10350:0 "$artifact_zroni_research$"
  ancrel.10350.name:0 "$artifact_zroni_research$"
  ancrel.10350.desc:0 "We have successfully managed to integrate the Zroni artifacts into our research process. Their insights into psionic study will greatly aid our own."
- zroni_artifact_research_unlocked:0 "Minor Artifact Action Unlocked: §Y$artifact_zroni_research$§!"
+ zroni_artifact_research_unlocked:0 "ปลดล็อกการดำเนินการใหม่ของศิลปวัตถุชั้นรอง: §Y$artifact_zroni_research$§!"
  ancient_battle_site:0 "$ancrel.108.name$"
  artifact_cultural_study:1 "ส่งไปแสดงที่พิพิธภัณฑ์ §E(การตัดสินใจของดาวเคราะห์)§!"
  artifact_cultural_study_desc:0 "The $decision_museum_exhibits$ decision increases the production of Culture Workers on one of our planets."
@@ -810,7 +810,7 @@
  building_archaeostudies_faculty_desc:0 "A series of laboratories dedicated to the studies of technological applications of minor artifacts retrieved from elder empires."
  building_league_offices:0 "$tech_secrets_league$"
  building_league_offices_desc:0 "$tech_secrets_league_desc$"
- building_league_offices_effect:0 "[Owner.GetAdministratorPluralWithIcon] produce an additional §G+1§! £amenities£ Amenities."
+ building_league_offices_effect:0 "[Owner.GetAdministratorPluralWithIcon] ผลิต £amenities£ ความอยู่ดีกินดี เพิ่มขึ้น §G+1§!"
  sm_cybrex_mining_hub:0 "$tech_secrets_cybrex$"
  sm_cybrex_mining_hub_desc:0 "$tech_secrets_cybrex_desc$\n"
  sm_cybrex_mining_hub_desc_modifier:0 "[Root.GetCybrexMiningHubEffect]"
@@ -865,29 +865,29 @@
  SMALL_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ เล็ก"
  SMALL_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_SMALL_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectSmallShield]"
- tt_SMALL_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+75§!"
+ tt_SMALL_ARCHAEO_SHIELD:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+75§!"
  MEDIUM_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ กลาง"
  MEDIUM_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_MEDIUM_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectMediumShield]"
- tt_MEDIUM_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+190§!"
+ tt_MEDIUM_ARCHAEO_SHIELD:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+190§!"
  LARGE_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ ใหญ่"
  LARGE_ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  tt_LARGE_ARCHAEO_SHIELD_AP:0 "[GetArchaeoengineersEffectLargeShield]"
- tt_LARGE_ARCHAEO_SHIELD:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+450§!"
+ tt_LARGE_ARCHAEO_SHIELD:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+450§!"
  ARCHAEO_ARMOR:0 "$tech_archaeoarmor$"
  ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  SMALL_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ เล็ก"
  SMALL_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_SMALL_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectSmallArmor]"
- tt_SMALL_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+75§!"
+ tt_SMALL_ARCHAEO_ARMOR:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+75§!"
  MEDIUM_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ กลาง"
  MEDIUM_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_MEDIUM_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectMediumArmor]"
- tt_MEDIUM_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+190§!"
+ tt_MEDIUM_ARCHAEO_ARMOR:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+190§!"
  LARGE_ARCHAEO_ARMOR:0 "$ARCHAEO_ARMOR$ ใหญ่"
  LARGE_ARCHAEO_ARMOR_DESC:0 "$tech_archaeoarmor_desc$"
  tt_LARGE_ARCHAEO_ARMOR_AP:0 "[GetArchaeoengineersEffectLargeArmor]"
- tt_LARGE_ARCHAEO_ARMOR:0 "From §Y$ap_archaeoengineers$§!:\nShield Hit Points: §G+450§!"
+ tt_LARGE_ARCHAEO_ARMOR:0 "จาก §Y$ap_archaeoengineers$§!:\nHP โล่พลังงาน: §G+450§!"
  STARBASE_AURA_ZRONI_STORM:0 "Zroni Storm Caster: Polarization Module"
  STARBASE_AURA_ZRONI_STORM_DESC:0 "Controlling the Storm's general polarity allows to increase its power to dangerous levels for any unprepared vessel while maintaining safe conditions for our own."
  aura_starbase_zroni_storm:0 "$STARBASE_AURA_ZRONI_STORM$"
